# manohar01

./: .env.template  .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-DEX-Archiver.md  README.md  README_FIRST.txt  SECRETS_SETUP.md  START_HERE.md  Task-Requirements.txt  build.gradle  deploy.sh  lambda_function.py  requirements.txt  settings.gradle  template.yaml  test_lambda.py  validate.sh
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
python/: README.md  build.sh  config.yaml  local_invoke_clients.sh  pyproject.toml  requirements.txt  template.yaml
python/archives/: trigger_sample-1.json  trigger_sample-2.json  trigger_sample-3.json
python/output/: last_run_summary.json
python/src/pyarchiver/: __init__.py  archiver_app.py  archiver_lambda_service.py  archiver_service.py  client_fetcher.py  lambda_handler.py  token_provider.py
python/src/pyarchiver/dao/: client_dao.py  credential_dao.py
python/src/pyarchiver/models/: client_credential.py  client_record.py
python/src/pyarchiver/storage/: local_uploader.py  s3_uploader.py
python/src/pyarchiver/trigger/: constants.py  trigger_fetcher.py
python/tests/: test_archiver_lambda_integration.py  test_archiver_lambda_service.py
src/main/java/com/mediant/api/dataexchange/: Columns.java  SQLErrorCode.java  ValidationVlues.java
src/main/java/com/mediant/api/dataexchange/account/: AccountPackageMarker.java
src/main/java/com/mediant/api/dataexchange/app/: AppPackageMarker.java  ArchiverApp.java
src/main/resources/: application.properties
(+21 files in other folders)
