[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarchiver"
version = "0.1.0"
description = "Lightweight Python port of the dex-trigger-response-archive archiver"
readme = "README.md"
authors = [ { name = "Repository Maintainer" } ]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "boto3>=1.28.0",
  "requests>=2.31.0",
  "PyYAML>=6.0"
]

[project.scripts]
pyarchiver = "pyarchiver.archiver_app:main"

[tool.setuptools.packages.find]
where = ["src"]
